Fix color contrast in featured articles info
Fix #6

--- a/src/less/template.less
+++ b/src/less/template.less
@@ -1383,6 +1383,10 @@ dl.article-info {
 
 .blog-featured {
 
+  dl.article-info.muted {
+    color: @white;
+  }
+
 	.items-leading {
 
 		[class*="leading-"] {
